--- a/app/styles/sass/main.scss
+++ b/app/styles/sass/main.scss
@@ -140,6 +140,7 @@ body {
     @extend %no-spacing;
     font-family: $julius-font;
     color: $grey-font;
+    background-color: $white;
 }
 
 ul {
